src_old/objects/DatasourceSchema__c.object
<CustomObject>
    <fields>
        <fullName>DataType__c</fullName>
        <description>data type</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Float</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Datasource</label>
        <referenceTo>Datasource__c</referenceTo>
        <relationshipLabel>SchemaDatasource</relationshipLabel>
        <relationshipName>DatasourceId_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>target sobject field api name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupBy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GroupBy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Data Column Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>data file column title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updatable</label>
        <type>Checkbox</type>
    </fields>
    <label>DatasourceSchema</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSS-{00000}</displayFormat>
        <label>DatasourceSchema Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DatasourceSchemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>